# pybirds

./: LICENSE  README.md  pyproject.toml
bird/: __main__.py
bird/core/: api.py  generator.py  prompter.py  rookery.py  util.py
bird/model/: bird.py  prompt.py
config/: config.json
data/: birds.json  prompts.json
tests/: test_api.py  test_generator.py  test_prompter.py  test_rookery.py  test_util.py
