[tool.poetry]
name = "pybirds"
version = "0.1.0"
description = "A bird phrase generator."
authors = ["Martin Bukowski <mbukowski@bmds.us>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
